crates/otter-vm/tests/compile_fail/native_ctx_is_not_send.stderr
error[E0277]: `*const ()` cannot be shared between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const ()` cannot be shared between threads safely
  |
  = help: within `NativeCallInfo`, the trait `Sync` is not implemented for `*const ()`
note: required because it appears within the type `PhantomData<*const ()>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Value`
 --> src/value/mod.rs
  |
  | pub struct Value(u64, std::marker::PhantomData<*const ()>);
  |            ^^^^^
note: required because it appears within the type `NativeCallInfo`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCallInfo {
  |            ^^^^^^^^^^^^^^
  = note: required for `&'static NativeCallInfo` to implement `Send`
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut otter_gc::heap::GcHeap` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*mut otter_gc::heap::GcHeap` cannot be sent between threads safely
  |
  = help: within `NativeCtx<'static>`, the trait `Send` is not implemented for `*mut otter_gc::heap::GcHeap`
note: required because it appears within the type `otter_gc::external::ExternalMemory`
 --> $WORKSPACE/crates/otter-gc/src/external.rs
  |
  | pub struct ExternalMemory {
  |            ^^^^^^^^^^^^^^
note: required because it appears within the type `Option<otter_gc::external::ExternalMemory>`
 --> $RUST/core/src/option.rs
  |
  | pub enum Option<T> {
  |          ^^^^^^
note: required because it appears within the type `otter_vm::Interpreter`
 --> src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut otter_vm::Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const ObjectBody` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const ObjectBody` cannot be sent between threads safely
  |
  = help: within `NativeCtx<'static>`, the trait `Send` is not implemented for `*const ObjectBody`
note: required because it appears within the type `PhantomData<*const ObjectBody>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<ObjectBody>`
 --> $WORKSPACE/crates/otter-gc/src/compressed.rs
  |
  | pub struct Gc<T: ?Sized> {
  |            ^^
note: required because it appears within the type `otter_vm::Interpreter`
 --> src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut otter_vm::Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut ()` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*mut ()` cannot be sent between threads safely
  |
  = help: within `NativeCtx<'static>`, the trait `Send` is not implemented for `*mut ()`
note: required because it appears within the type `PhantomData<*mut ()>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::external::ExternalMemory`
 --> $WORKSPACE/crates/otter-gc/src/external.rs
  |
  | pub struct ExternalMemory {
  |            ^^^^^^^^^^^^^^
note: required because it appears within the type `Option<otter_gc::external::ExternalMemory>`
 --> $RUST/core/src/option.rs
  |
  | pub enum Option<T> {
  |          ^^^^^^
note: required because it appears within the type `otter_vm::Interpreter`
 --> src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut otter_vm::Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const ()` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const ()` cannot be sent between threads safely
  |
  = help: within `NativeCtx<'static>`, the trait `Send` is not implemented for `*const ()`
note: required because it appears within the type `PhantomData<*const ()>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Value`
 --> src/value/mod.rs
  |
  | pub struct Value(u64, std::marker::PhantomData<*const ()>);
  |            ^^^^^
note: required because it appears within the type `Option<otter_vm::Value>`
 --> $RUST/core/src/option.rs
  |
  | pub enum Option<T> {
  |          ^^^^^^
note: required because it appears within the type `otter_vm::Interpreter`
 --> src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut otter_vm::Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `(dyn StepTracer + 'static)` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(dyn StepTracer + 'static)` cannot be sent between threads safely
  |
  = help: the trait `Send` is not implemented for `(dyn StepTracer + 'static)`
  = note: required for `std::ptr::Unique<(dyn StepTracer + 'static)>` to implement `Send`
note: required because it appears within the type `Box<(dyn StepTracer + 'static)>`
 --> $RUST/alloc/src/boxed.rs
  |
  | pub struct Box<
  |            ^^^
note: required because it appears within the type `Option<Box<(dyn StepTracer + 'static)>>`
 --> $RUST/core/src/option.rs
  |
  | pub enum Option<T> {
  |          ^^^^^^
note: required because it appears within the type `otter_vm::Interpreter`
 --> src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut otter_vm::Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const otter_vm::object::shape_body::ShapeBody` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const otter_vm::object::shape_body::ShapeBody` cannot be sent between threads safely
  |
  = help: within `otter_gc::compressed::Gc<otter_vm::object::shape_body::ShapeBody>`, the trait `Send` is not implemented for `*const otter_vm::object::shape_body::ShapeBody`
note: required because it appears within the type `PhantomData<*const otter_vm::object::shape_body::ShapeBody>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<otter_vm::object::shape_body::ShapeBody>`
 --> $WORKSPACE/crates/otter-gc/src/compressed.rs
  |
  | pub struct Gc<T: ?Sized> {
  |            ^^
  = note: required for `Cell<otter_gc::compressed::Gc<otter_vm::object::shape_body::ShapeBody>>` to implement `Send`
note: required because it appears within the type `otter_vm::object::shape_runtime::ShapeRuntime`
 --> src/object/shape_runtime.rs
  |
  | pub(crate) struct ShapeRuntime {
  |                   ^^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Interpreter`
 --> src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut otter_vm::Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `(dyn ShapeTransitionObserver + 'static)` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(dyn ShapeTransitionObserver + 'static)` cannot be sent between threads safely
  |
  = help: the trait `Send` is not implemented for `(dyn ShapeTransitionObserver + 'static)`
  = note: required for `std::ptr::Unique<(dyn ShapeTransitionObserver + 'static)>` to implement `Send`
note: required because it appears within the type `Box<(dyn ShapeTransitionObserver + 'static)>`
 --> $RUST/alloc/src/boxed.rs
  |
  | pub struct Box<
  |            ^^^
note: required because it appears within the type `Option<Box<(dyn ShapeTransitionObserver + 'static)>>`
 --> $RUST/core/src/option.rs
  |
  | pub enum Option<T> {
  |          ^^^^^^
note: required because it appears within the type `otter_vm::object::shape_runtime::ShapeRuntime`
 --> src/object/shape_runtime.rs
  |
  | pub(crate) struct ShapeRuntime {
  |                   ^^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Interpreter`
 --> src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut otter_vm::Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut NativeFrame` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*mut NativeFrame` cannot be sent between threads safely
  |
  = help: within `NativeCtx<'static>`, the trait `Send` is not implemented for `*mut NativeFrame`
note: required because it appears within the type `JitNativeActivation`
 --> src/jit.rs
  |
  | pub struct JitNativeActivation {
  |            ^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `PhantomData<JitNativeActivation>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `alloc::raw_vec::RawVec<JitNativeActivation>`
 --> $RUST/alloc/src/raw_vec/mod.rs
  |
  | pub(crate) struct RawVec<T, A: Allocator = Global> {
  |                   ^^^^^^
note: required because it appears within the type `Vec<JitNativeActivation>`
 --> $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  |            ^^^
note: required because it appears within the type `otter_vm::Interpreter`
 --> src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut otter_vm::Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut otter_gc::header::GcHeader` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*mut otter_gc::header::GcHeader` cannot be sent between threads safely
  |
  = help: within `NativeCtx<'static>`, the trait `Send` is not implemented for `*mut otter_gc::header::GcHeader`
note: required because it appears within the type `PhantomData<*mut otter_gc::header::GcHeader>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `alloc::raw_vec::RawVec<*mut otter_gc::header::GcHeader>`
 --> $RUST/alloc/src/raw_vec/mod.rs
  |
  | pub(crate) struct RawVec<T, A: Allocator = Global> {
  |                   ^^^^^^
note: required because it appears within the type `VecDeque<*mut otter_gc::header::GcHeader>`
 --> $RUST/alloc/src/collections/vec_deque/mod.rs
  |
  | pub struct VecDeque<
  |            ^^^^^^^^
note: required because it appears within the type `otter_gc::marking::MarkingState`
 --> $WORKSPACE/crates/otter-gc/src/marking.rs
  |
  | pub struct MarkingState {
  |            ^^^^^^^^^^^^
note: required because it appears within the type `otter_gc::heap::GcHeap`
 --> $WORKSPACE/crates/otter-gc/src/heap.rs
  |
  | pub struct GcHeap {
  |            ^^^^^^
note: required because it appears within the type `otter_vm::Interpreter`
 --> src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut otter_vm::Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const (dyn otter_gc::frame_roots::FrameRoots + 'static)` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const (dyn otter_gc::frame_roots::FrameRoots + 'static)` cannot be sent between threads safely
  |
  = help: within `NativeCtx<'static>`, the trait `Send` is not implemented for `*const (dyn otter_gc::frame_roots::FrameRoots + 'static)`
note: required because it appears within the type `PhantomData<*const (dyn otter_gc::frame_roots::FrameRoots + 'static)>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `alloc::raw_vec::RawVec<*const (dyn otter_gc::frame_roots::FrameRoots + 'static)>`
 --> $RUST/alloc/src/raw_vec/mod.rs
  |
  | pub(crate) struct RawVec<T, A: Allocator = Global> {
  |                   ^^^^^^
note: required because it appears within the type `Vec<*const (dyn otter_gc::frame_roots::FrameRoots + 'static)>`
 --> $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  |            ^^^
note: required because it appears within the type `otter_gc::frame_roots::FrameRootProviders`
 --> $WORKSPACE/crates/otter-gc/src/frame_roots.rs
  |
  | pub struct FrameRootProviders {
  |            ^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `otter_gc::heap::GcHeap`
 --> $WORKSPACE/crates/otter-gc/src/heap.rs
  |
  | pub struct GcHeap {
  |            ^^^^^^
note: required because it appears within the type `otter_vm::Interpreter`
 --> src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut otter_vm::Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut otter_vm::Value` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*mut otter_vm::Value` cannot be sent between threads safely
  |
  = help: within `NativeCtx<'static>`, the trait `Send` is not implemented for `*mut otter_vm::Value`
note: required because it appears within the type `RegisterWindow`
 --> src/register_stack.rs
  |
  | pub struct RegisterWindow {
  |            ^^^^^^^^^^^^^^
note: required because it appears within the type `Frame`
 --> src/frame_state.rs
  |
  | pub struct Frame {
  |            ^^^^^
note: required because it appears within the type `PhantomData<Frame>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `alloc::raw_vec::RawVec<Frame>`
 --> $RUST/alloc/src/raw_vec/mod.rs
  |
  | pub(crate) struct RawVec<T, A: Allocator = Global> {
  |                   ^^^^^^
note: required because it appears within the type `Vec<Frame>`
 --> $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  |            ^^^
note: required because it appears within the type `ActivationStack`
 --> src/activation_stack.rs
  |
  | pub struct ActivationStack {
  |            ^^^^^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut ActivationStack`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const UpvalueCellBody` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const UpvalueCellBody` cannot be sent between threads safely
  |
  = help: within `((u32, u32), otter_gc::compressed::Gc<UpvalueCellBody>)`, the trait `Send` is not implemented for `*const UpvalueCellBody`
note: required because it appears within the type `PhantomData<*const UpvalueCellBody>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<UpvalueCellBody>`
 --> $WORKSPACE/crates/otter-gc/src/compressed.rs
  |
  | pub struct Gc<T: ?Sized> {
  |            ^^
  = note: required because it appears within the type `((u32, u32), otter_gc::compressed::Gc<UpvalueCellBody>)`
  = note: required for `hashbrown::raw::RawTable<((u32, u32), otter_gc::compressed::Gc<UpvalueCellBody>)>` to implement `Send`
note: required because it appears within the type `hashbrown::map::HashMap<(u32, u32), otter_gc::compressed::Gc<UpvalueCellBody>, rustc_hash::FxBuildHasher>`
 --> /rust/deps/hashbrown-0.16.1/src/map.rs:185:11
note: required because it appears within the type `HashMap<(u32, u32), otter_gc::compressed::Gc<UpvalueCellBody>, rustc_hash::FxBuildHasher>`
 --> $RUST/std/src/collections/hash/map.rs
  |
  | pub struct HashMap<
  |            ^^^^^^^
note: required because it appears within the type `otter_vm::Interpreter`
 --> src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut otter_vm::Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const EvalEnvBody` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const EvalEnvBody` cannot be sent between threads safely
  |
  = help: within `NativeCtx<'static>`, the trait `Send` is not implemented for `*const EvalEnvBody`
note: required because it appears within the type `PhantomData<*const EvalEnvBody>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<EvalEnvBody>`
 --> $WORKSPACE/crates/otter-gc/src/compressed.rs
  |
  | pub struct Gc<T: ?Sized> {
  |            ^^
note: required because it appears within the type `Option<otter_gc::compressed::Gc<EvalEnvBody>>`
 --> $RUST/core/src/option.rs
  |
  | pub enum Option<T> {
  |          ^^^^^^
note: required because it appears within the type `otter_vm::call_ops::LeanCallbackRoot`
 --> src/call_ops.rs
  |
  | pub(crate) struct LeanCallbackRoot {
  |                   ^^^^^^^^^^^^^^^^
note: required because it appears within the type `PhantomData<otter_vm::call_ops::LeanCallbackRoot>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `alloc::raw_vec::RawVec<otter_vm::call_ops::LeanCallbackRoot>`
 --> $RUST/alloc/src/raw_vec/mod.rs
  |
  | pub(crate) struct RawVec<T, A: Allocator = Global> {
  |                   ^^^^^^
note: required because it appears within the type `Vec<otter_vm::call_ops::LeanCallbackRoot>`
 --> $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  |            ^^^
note: required because it appears within the type `otter_vm::Interpreter`
 --> src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut otter_vm::Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const SymbolBody` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const SymbolBody` cannot be sent between threads safely
  |
  = help: within `NativeCtx<'static>`, the trait `Send` is not implemented for `*const SymbolBody`
note: required because it appears within the type `PhantomData<*const SymbolBody>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<SymbolBody>`
 --> $WORKSPACE/crates/otter-gc/src/compressed.rs
  |
  | pub struct Gc<T: ?Sized> {
  |            ^^
note: required because it appears within the type `JsSymbol`
 --> src/symbol.rs
  |
  | pub struct JsSymbol {
  |            ^^^^^^^^
note: required because it appears within the type `PhantomData<JsSymbol>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `alloc::raw_vec::RawVec<JsSymbol>`
 --> $RUST/alloc/src/raw_vec/mod.rs
  |
  | pub(crate) struct RawVec<T, A: Allocator = Global> {
  |                   ^^^^^^
note: required because it appears within the type `Vec<JsSymbol>`
 --> $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  |            ^^^
note: required because it appears within the type `WellKnownSymbols`
 --> src/symbol.rs
  |
  | pub struct WellKnownSymbols {
  |            ^^^^^^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Interpreter`
 --> src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut otter_vm::Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const JsStringBody` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const JsStringBody` cannot be sent between threads safely
  |
  = help: within `otter_gc::compressed::Gc<JsStringBody>`, the trait `Send` is not implemented for `*const JsStringBody`
note: required because it appears within the type `PhantomData<*const JsStringBody>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<JsStringBody>`
 --> $WORKSPACE/crates/otter-gc/src/compressed.rs
  |
  | pub struct Gc<T: ?Sized> {
  |            ^^
  = note: required for `Cell<otter_gc::compressed::Gc<JsStringBody>>` to implement `Send`
  = note: required because it appears within the type `(std::string::String, Cell<otter_gc::compressed::Gc<JsStringBody>>)`
  = note: required for `hashbrown::raw::RawTable<(std::string::String, Cell<otter_gc::compressed::Gc<JsStringBody>>)>` to implement `Send`
note: required because it appears within the type `hashbrown::map::HashMap<std::string::String, Cell<otter_gc::compressed::Gc<JsStringBody>>, rustc_hash::FxBuildHasher>`
 --> /rust/deps/hashbrown-0.16.1/src/map.rs:185:11
note: required because it appears within the type `HashMap<std::string::String, Cell<otter_gc::compressed::Gc<JsStringBody>>, rustc_hash::FxBuildHasher>`
 --> $RUST/std/src/collections/hash/map.rs
  |
  | pub struct HashMap<
  |            ^^^^^^^
note: required because it appears within the type `otter_vm::object::shape_runtime::ShapeRuntime`
 --> src/object/shape_runtime.rs
  |
  | pub(crate) struct ShapeRuntime {
  |                   ^^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Interpreter`
 --> src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut otter_vm::Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const GeneratorBody` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const GeneratorBody` cannot be sent between threads safely
  |
  = help: within `NativeCtx<'static>`, the trait `Send` is not implemented for `*const GeneratorBody`
note: required because it appears within the type `PhantomData<*const GeneratorBody>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<GeneratorBody>`
 --> $WORKSPACE/crates/otter-gc/src/compressed.rs
  |
  | pub struct Gc<T: ?Sized> {
  |            ^^
note: required because it appears within the type `JsGenerator`
 --> src/generator.rs
  |
  | pub struct JsGenerator {
  |            ^^^^^^^^^^^
note: required because it appears within the type `MicrotaskKind`
 --> src/microtask.rs
  |
  | pub enum MicrotaskKind {
  |          ^^^^^^^^^^^^^
note: required because it appears within the type `Microtask`
 --> src/microtask.rs
  |
  | pub struct Microtask {
  |            ^^^^^^^^^
note: required because it appears within the type `PhantomData<Microtask>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `alloc::raw_vec::RawVec<Microtask>`
 --> $RUST/alloc/src/raw_vec/mod.rs
  |
  | pub(crate) struct RawVec<T, A: Allocator = Global> {
  |                   ^^^^^^
note: required because it appears within the type `VecDeque<Microtask>`
 --> $RUST/alloc/src/collections/vec_deque/mod.rs
  |
  | pub struct VecDeque<
  |            ^^^^^^^^
note: required because it appears within the type `MicrotaskQueue`
 --> src/microtask.rs
  |
  | pub struct MicrotaskQueue {
  |            ^^^^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Interpreter`
 --> src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut otter_vm::Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const PurePromiseBody` cannot be sent between threads safely
 --> tests/compile_fail/native_ctx_is_not_send.rs:6:19
  |
6 |     assert_send::<otter_vm::NativeCtx<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const PurePromiseBody` cannot be sent between threads safely
  |
  = help: within `NativeCtx<'static>`, the trait `Send` is not implemented for `*const PurePromiseBody`
note: required because it appears within the type `PhantomData<*const PurePromiseBody>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<PurePromiseBody>`
 --> $WORKSPACE/crates/otter-gc/src/compressed.rs
  |
  | pub struct Gc<T: ?Sized> {
  |            ^^
note: required because it appears within the type `PurePromise`
 --> src/promise.rs
  |
  | pub struct PurePromise {
  |            ^^^^^^^^^^^
note: required because it appears within the type `promise::PromiseRepr`
 --> src/promise.rs
  |
  | enum PromiseRepr {
  |      ^^^^^^^^^^^
note: required because it appears within the type `JsPromiseHandle`
 --> src/promise.rs
  |
  | pub struct JsPromiseHandle {
  |            ^^^^^^^^^^^^^^^
note: required because it appears within the type `PhantomData<JsPromiseHandle>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `alloc::raw_vec::RawVec<JsPromiseHandle>`
 --> $RUST/alloc/src/raw_vec/mod.rs
  |
  | pub(crate) struct RawVec<T, A: Allocator = Global> {
  |                   ^^^^^^
note: required because it appears within the type `Vec<JsPromiseHandle>`
 --> $RUST/alloc/src/vec/mod.rs
  |
  | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
  |            ^^^
note: required because it appears within the type `otter_vm::promise_rejection::RejectionTracker`
 --> src/promise_rejection.rs
  |
  | pub(crate) struct RejectionTracker {
  |                   ^^^^^^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Interpreter`
 --> src/lib.rs
  |
  | pub struct Interpreter {
  |            ^^^^^^^^^^^
  = note: required because it appears within the type `&'static mut otter_vm::Interpreter`
note: required because it appears within the type `runtime_cx::RuntimeTurn<'static>`
 --> src/runtime_cx.rs
  |
  | pub(crate) struct RuntimeTurn<'rt> {
  |                   ^^^^^^^^^^^
note: required because it appears within the type `NativeCtx<'static>`
 --> src/runtime_cx.rs
  |
  | pub struct NativeCtx<'rt> {
  |            ^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compile_fail/native_ctx_is_not_send.rs:3:19
  |
3 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`
